# learning-ros

./: Creating a Workspace  Installation  PULL_REQUEST_TEMPLATE.md  README.md
First_Robo/: CMakeLists.txt  package.xml
First_Robo/config/: diffdrive.yaml  hands.yaml  head.yaml
First_Robo/launch/: gazebo.launch  pro_move.launch
First_Robo/source/: wall-e eyes.dae  wall-e eyes.fbx
First_Robo/urdf/: probot.urdf
Theory/: Important Links.odt  Understanding ROS nodes.odt
catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
control_p3dx/: CMakeLists.txt  package.xml
control_p3dx/launch/: control_p3dx.launch
control_p3dx/src/: overall_control.py
move_p3dx/: package.xml
move_p3dx/src/: move_p3dx.py
navigation/: necessary_pkgs
navigation/p3dx_mapping/: CMakeLists.txt  package.xml
navigation/p3dx_mapping/launch/: p3dx_mapping.launch
navigation/p3dx_mapping/src/: new_map.pgm
navigation/turtlebot3_amcl/: CMakeLists.txt  package.xml
navigation/turtlebot3_mapping/: CMakeLists.txt  package.xml
navigation/turtlebot3_nav/: CMakeLists.txt  package.xml
p3dx/move_p3dx/: CMakeLists.txt
p3dx/p3dx_laserscan/: CMakeLists.txt  package.xml
p3dx/p3dx_obstacle_stop/: CMakeLists.txt
p3dx/p3dx_odom/: CMakeLists.txt  package.xml
p3dx_laserscan/src/: laser.py
p3dx_obstacle_stop/: package.xml
p3dx_obstacle_stop/src/: obstacle_stop.py
p3dx_odom/launch/: p3dx_odom.launch
project_turtlesim/: readme
project_turtlesim/src/turtle_bringup/: CMakeLists.txt  package.xml
project_turtlesim/src/turtle_bringup/launch/: my_launcher.launch.py
(+32 files in other folders)
